--- a/styles/manhwa.css
+++ b/styles/manhwa.css
@@ -1,11 +1,4 @@
-*{
-    padding: 0;
-    box-sizing: border-box;
-    margin: 0 auto;
-}
 :root{
-    --o-animation-fill-mode: forwards;
-    --o-animation-delay: 3s;
     --normal-font-size: 0.9rem;
     --h1-header-fs: 2.5rem;
     --h2-header-fs: 1.3rem;
@@ -17,7 +10,7 @@ body{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-image: url(../images/IMG_20250516_214408.jpg);
+    background-image: url(../images/IMG_20250516_214408.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -28,79 +21,86 @@ header{
     display: grid;
     grid-template: 1fr / auto 1fr;
     background: rgb(107, 106, 106, 0.5);
+    overflow: hidden;
 }
 
 .logo{
     margin: 0;
     padding: 0;
+    width: fit-content;
+    height: fit-content;
+}
+
+.logo img{
+    width: 55px;
+    height: 55px;
+    margin: 0;
+    padding: 0;
     animation-name: logoSpin;
-    animation-delay: 0s;
     animation-duration: 5s;
-    animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
     animation-fill-mode: forwards;
+    animation-direction: normal;
 }
+
 @keyframes logoSpin {
     0%{
     }
+
     100%{
         transform: rotateZ(360deg);
     }
 }
 
-.logo img{
-    width: 80px;
-    height: 80px;
-    display: block;
-}
-
 nav{
-    display: flex;
+    justify-items: right;
     align-items: center;
-    justify-self: right;
-    margin-right: 0;
+    align-content: center;
 }
 
-nav a{
-    padding: 30px 30px;
-    text-decoration: none;
+.navigation{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    align-self: center;
+}
+
+.navigation a{
     color: #fff;
-    font-size: var(--h3-header-fs);
+    padding: 22px 30px;
+    text-decoration: none;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    align-self: center;
 }
 
-nav a:hover{
-    background-color: rgb(255, 255, 255, 0.2);
-    transition: 0.5s;
-}
+
+/**************** Main ****************/
 
 #hero_body{
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4, 1fr) auto 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-#hero{
-    display: inline;
-    padding: 0;
+.hero_img{
+    display: inline-block;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
     justify-self: center;
-    grid-column: 1 / 7;
-    grid-row: 1 / 7;
-    width: 100%;
-}
-
-#hero img{
-    display: inline;
-    padding: 0;
-    margin-bottom: 0;
-    width: 100%;
-    max-width: 1000px;
 }
 
 .hero_header{
-    grid-column: 4 / 7;
-    grid-row: 2 / 3;
     width: 100%;
+    position: relative;
+    height: fit-content;
+    grid-row: 1 / 2;
+    grid-column: 2 / 4;
+    justify-items: right;
+    margin: 0;
+    padding: 0;
     animation-name: slideIn;
     animation-duration: 2.18s;
     animation-fill-mode: forwards;
@@ -109,7 +109,12 @@ nav a:hover{
 
 .hero_header h2{
     text-shadow: 4px 4px 4px rgb(255, 255, 255, 0.4);
-    font-size: clamp(1.5rem, 5vw, 10vw);
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 3rem;
+    margin-right: 20px;
+    margin-bottom: 10px;
     font-family: sans-serif;
     z-index: 10;
 }
@@ -122,15 +127,15 @@ nav a:hover{
     }
 }
 
-#hero_body p{
+.hero_header p{
     font-size: var(--normal-font-size);
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
-    align-content: end;
+    position: absolute;
+    top: 99px;
+    right: 250px;
+    margin-top: 0;
+    justify-self: center;
     z-index: 10;
     font-family: monospace;
-    margin-right: -1000%;
-    width: 100%;
     animation-name: sec_slide;
     animation-timing-function: ease-out;
     animation-duration: 2.6s;
@@ -159,8 +164,6 @@ nav a:hover{
     border-radius: 2px;
     visibility: hidden;
     position: absolute;
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
     margin-left: 0;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
@@ -170,7 +173,10 @@ nav a:hover{
 
 .red{
     background-color: red;
-    top: 0;
+    top: 20px;
+    right: 460px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     animation-name: clr_red;
 }
 @keyframes clr_red {
@@ -192,7 +198,10 @@ nav a:hover{
 
 .yellow{
     background-color: yellow;
-    top: 50%;
+    right: 460px;
+    top: 60px;    
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     animation-name: clr_yellow;
 }
 @keyframes clr_yellow {
@@ -213,7 +222,10 @@ nav a:hover{
 
 .blue{
     background-color: blue;
-    bottom: 0;
+    right: 460px;
+    top: 100px;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     animation-name: clr_blue;
 }
 @keyframes clr_blue {
@@ -237,15 +249,17 @@ nav a:hover{
     color: #fff;
     text-decoration: none;
     font-size: var(--h3-header-fs);
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 20px;
+    padding-right: 20px;
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
     text-align: center;
     align-content: center;
+    justify-self: center;
     height: 50px;
+    width: 170px;
     background: linear-gradient(rgb(255, 41, 237), purple);
     box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.3);
-    grid-column: 3 / 5;
-    grid-row: 4 / 5;
     border-radius: 35px;
 }
 .explore:active{
