--- a/styles/explore.css
+++ b/styles/explore.css
@@ -232,20 +232,20 @@ main{
     margin-bottom: var(--space-15px);
     width: 100%;
     max-width: 265px;
-    height: 500px;
+    height: fit-content;
     border-radius: 5px;
     box-shadow: 1px 1px 4px #b1b1b1;
-    transition: 1.2s;
+    transition: 0.6s;
 }
 
 .card:hover{
-    transform: skewY(-3deg);
-    scale: 1.02;
+    transform: skewY(-3.5deg);
+    scale: 1.023;
 }
 
 .card:active{
-    transform: skewY(-3deg);
-    scale: 1.02;
+    transform: skewY(-3.5deg);
+    scale: 1.023;
 }
 
 .card_backdrop{
@@ -384,7 +384,6 @@ main{
 
 .card_description_p{
     padding: 0;
-    margin-bottom: 0;
     text-align: start;
 }
 
@@ -465,6 +464,7 @@ main{
     to {translate: -100%;}
 }
 
+/**************** Footer ****************/
 footer{
     display: flex;
     flex-direction: column;
@@ -472,18 +472,6 @@ footer{
     justify-items: center;
     margin-top: var(--space-15px);
     background: rgb(107, 106, 106, 0.5);
-}
-
-.f1{
-    width: 100%;
-    justify-content: center;
-    display: flex;
-}
-
-.f1 p{
-    text-align: center;
-    margin: 5px 0;
-    padding: 0;
 }
 
 .social_grid a img{
@@ -495,21 +483,43 @@ footer{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
     justify-content: center;
     justify-items: center;
     gap: var(--space-10px);
-    margin-top: var(--space-10px);
 }
 
 #mail{
-    margin-left: 0;
+    margin: 0;
+    text-align: right;
+    justify-self: right;
+}
+
+#mail a{
+    text-decoration: none;
 }
 
 .social_grid span:nth-child(1){
+    display: flex;
     grid-column: 1/2;
-    text-align: left;
+    text-align: center;
+    justify-self: center;
+    align-content: center;
+    align-items: center;
+}
+
+.social_grid span:nth-child(1) p{
+    font-size: 1.6rem;
+    margin: 0;
+    padding: 0;
     justify-self: left;
-    margin-left: var(--space-10px);
+}
+
+.footer_logo{
+    display: inline;
+    width: 100px;
+    height: 100px;
+    justify-self: right;
 }
 
 .social_grid span:nth-child(2){
@@ -518,13 +528,28 @@ footer{
     justify-self: right;
     align-self: self-end;
     margin-right: var(--space-10px);
-    margin-bottom: 16px;
+}
+
+.social_grid span:nth-child(2) p{
+    margin: 7px 0;
+}
+
+.social_grid span:nth-child(3){
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: var(--space-10px);
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
 }
 
 .footer_border{
     width: 100%;
     text-align: center;
     padding-top: 5px;
-    border-top: solid #fff 1px;
     margin: 0 0 5px 0;
+    font-size: 0.9rem;
 }
