--- a/styles/manhwa.css
+++ b/styles/manhwa.css
@@ -261,6 +261,7 @@ nav{
     background: linear-gradient(rgb(255, 41, 237), purple);
     box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.3);
     border-radius: 35px;
+    transition: 0.4s;
 }
 .explore:active{
     scale: 0.95;
