--- a/styles/about.css
+++ b/styles/about.css
@@ -111,10 +111,12 @@ nav{
     color: var(--green-color);
     font-weight: 800;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .al{
     font-weight: 100;
+    text-align: center;
     font-size: 1.8rem;
 }
 
