--- a/styles/contact.css
+++ b/styles/contact.css
@@ -512,40 +512,95 @@ form select{
   }
 }
 
-/****************** Footer *****************/
 
+
+/**************** Footer ****************/
 footer{
-  display: grid;
-  grid-template: 1fr / 1fr 1fr 1fr;
-  background-color: var(--light-header-footer-clr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    background: rgb(107, 106, 106, 0.5);
 }
 
-.left_grid, .right_grid{
-  justify-items: left;
-  align-items: center;
-}
-
-.left_grid p, .left_grid a, .right_grid p, .right_grid a{
-  line-height: .5rem;
+.social_grid a img{
+    width: 30px;
+    height: 30px;
 }
 
 .social_grid{
-  display: flex;
-  column-gap: 10px;
-  justify-items: center;
-  justify-content: center;
-  justify-self: center;
-  margin-top: var(--padding-left-right);
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    justify-content: center;
+    justify-items: center;
+    gap: var(--space-10px);
 }
 
-.social_grid img{
-  width: 42px;
-  height: 42px;
-  border-radius: 10px;
+#mail{
+    margin: 0;
+    text-align: right;
+    justify-self: right;
 }
 
-.left_grid{
-  padding-left: var(--padding-left-right);
+#mail a{
+    text-decoration: none;
+}
+
+.social_grid span:nth-child(1){
+    display: flex;
+    grid-column: 1/2;
+    text-align: center;
+    justify-self: center;
+    align-content: center;
+    align-items: center;
+}
+
+.social_grid span:nth-child(1) p{
+    font-size: 1.6rem;
+    margin: 0;
+    padding: 0;
+    justify-self: left;
+}
+
+.footer_logo{
+    display: inline;
+    width: 100px;
+    height: 100px;
+    justify-self: right;
+}
+
+.social_grid span:nth-child(2){
+    grid-column: 3/4;
+    text-align: right;
+    justify-self: right;
+    align-self: self-end;
+    margin-right: var(--space-10px);
+}
+
+.social_grid span:nth-child(2) p{
+    margin: 7px 0;
+}
+
+.social_grid span:nth-child(3){
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: var(--space-10px);
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+}
+
+.footer_border{
+    width: 100%;
+    text-align: center;
+    padding-top: 5px;
+    margin: 0 0 5px 0;
+    font-size: 0.9rem;
 }
 
 /****************** Form ****************/
