--- a/styles/about.css
+++ b/styles/about.css
@@ -201,15 +201,19 @@ nav{
     font-size: 2.3rem;
     margin-bottom: 5px;
     font-weight: 800;
+    text-align: center;
 }
 
 .contact p{
     font-size: 1.2rem;
+    text-align: center;
 }
 
 .contact a{
     display: block;
     justify-self: center;
+    justify-content: center;
+    justify-items: center;
     align-self: center;
     color: #fff;
     padding: 10px 16px;
@@ -219,6 +223,7 @@ nav{
     border: solid 1px #fff;
     transition: 0.4s;
     max-width: 100px;
+    text-align: center;
 }
 
 .contact a:hover{
