--- a/styles/about.css
+++ b/styles/about.css
@@ -211,20 +211,17 @@ nav{
 
 .contact a{
     display: block;
-    justify-self: center;
     justify-content: center;
-    justify-items: center;
-    align-self: center;
+    align-content: center;
     color: #fff;
     padding: 10px 16px;
-    margin-top: var(--space-10px);
+    margin: var(--space-10px) auto 0 auto;
     text-decoration: none;
     font-size: 1.2rem;
     border: solid 1px #fff;
     transition: 0.4s;
-    width: 100%;
-    max-width: 100px;
     text-align: center;
+
 }
 
 .contact a:hover{
