--- a/styles/contact_sview.css
+++ b/styles/contact_sview.css
@@ -26,6 +26,54 @@
         height: 100%;
         padding: 0;
     }
+    
+
+    /***************** Main ***************/
+
+    main{
+        grid-template: auto 1fr / 1fr;
+    }
+
+    .application{
+        width: 100%;
+        margin: auto 0;
+        max-width: 830px;
+
+        h2{
+            padding-left: var(--padding-left-right);
+            font-size: 1.3rem;
+        }
+    }
+
+    #my_form{
+        width: 100%;
+        max-width: 400px;
+        justify-self: left;
+
+        fieldset{
+            width: 80%;
+            max-width: 400px;
+            justify-self: left;
+            margin-left: var(--padding-left-right);
+        }
+    }
+
+    .levels{
+        margin: 0;
+        h2{
+            color: #fff;
+            width: 95%;
+            padding-left: var(--padding-left-right);
+            text-align: center;
+            background-color: #333;
+            font-size: 1.3rem;
+        }
+
+        .wrapper h2{
+            background-color: rgb(255, 255, 255, 0);
+            color: #000;
+        }
+    }
 
 
     /************ Footer **************/
