--- a/styles/explore_sview.css
+++ b/styles/explore_sview.css
@@ -27,6 +27,66 @@
         padding: 0;
     }
 
+    /************** Main ****************/
+    .studios{
+        height: fit-content;
+    }
+
+    .studios_container{
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        grid-template-rows: minmax(75px, 73px) auto auto;
+        height: 120px;
+        width: fit-content;
+    }
+
+
+    .studios_container img:nth-child(1){
+        grid-row: 1/2;
+        grid-column: 1/2;
+        justify-self: center;
+        align-self: center;
+        margin: 0 10px;
+    }
+
+    .studios_container img:nth-child(2){
+        grid-row: 1/2;
+        grid-column: 2/3;
+        justify-self: center;
+        align-self: center;
+        margin: 0 10px;
+    }
+
+    .studios_container img:nth-child(3){
+        grid-row: 1/2;
+        grid-column: 3/4;
+        justify-self: center;
+        margin: 0 10px;
+        align-self: center;
+    }
+
+    .studios_container img:nth-child(4){
+        grid-row: 1/2;
+        grid-column: 4/5;
+        justify-self: center;
+        align-self: center;
+        margin: 0 10px;
+    }
+
+    .msg{
+        grid-row: 2/3;
+        grid-column: 1/5;
+        justify-self: center;
+        margin: 0 10px;
+    }
+
+    .copyr{
+        grid-row: 3/4;
+        grid-column: 1/5;
+        justify-self: center;
+    }
+
+
 
     /************ Footer **************/
     footer{
