--- a/styles/contact_sview.css
+++ b/styles/contact_sview.css
@@ -26,7 +26,7 @@
         height: 100%;
         padding: 0;
     }
-    
+
 
     /***************** Main ***************/
 
@@ -88,6 +88,11 @@
         grid-template-columns: auto auto;
         grid-template-rows: auto auto;
         gap: 0;
+    }
+    
+    #mail{
+        text-align: center;
+        justify-self: center;
     }
 
     .social_grid span:nth-child(1){
