--- a/styles/explore_sview.css
+++ b/styles/explore_sview.css
@@ -101,6 +101,11 @@
         grid-template-rows: auto auto;
         gap: 0;
     }
+    
+    #mail{
+        text-align: center;
+        justify-self: center;
+    }
 
     .social_grid span:nth-child(1){
         grid-column: 1/2;
