--- a/styles/manhwa_sview.css
+++ b/styles/manhwa_sview.css
@@ -35,6 +35,11 @@
         grid-template-rows: 1fr auto;
     }
 
+    #mail{
+        text-align: center;
+        justify-self: center;
+    }
+
     .social_grid{
         display: grid;
         grid-template-columns: auto auto;
