--- a/styles/manhwa.css
+++ b/styles/manhwa.css
@@ -161,7 +161,7 @@ nav{
     font-size: var(--normal-font-size);
     position: absolute;
     top: 99px;
-    right: 250px;
+    right: 25px;
     margin-top: 0;
     justify-self: center;
     z-index: 10;
@@ -276,7 +276,7 @@ nav{
 }
 
 .explore{
-    color: #fff;
+    color: #000;
     text-decoration: none;
     font-size: var(--h3-header-fs);
     padding-left: 20px;
@@ -288,8 +288,8 @@ nav{
     justify-self: center;
     height: 50px;
     width: 170px;
-    background: linear-gradient(rgb(255, 41, 237), purple);
-    box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.3);
+  background: linear-gradient(rgb(60, 218, 73), var(--green-color));
+  box-shadow: inset -5px -5px 10px rgba(255, 255, 255, 0.3);
     border-radius: 35px;
     transition: 0.4s;
 }
